Issue 834 (#1317)
* FeatureIDE#834 - fixed remaining Java 8 incompabilities.